--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,3 +1,28 @@
 .main-container{
   background-color: $main-background-color;
 }
+
+.page-section{
+  margin-top: $regular * 3;
+}
+
+.item-container{
+  flex-direction: column;
+  align-items: center;
+  &:nth-child(n){
+    margin-bottom: $regular * 1.5; 
+  }
+  &:last-child{
+    margin-bottom: 0;
+  }
+}
+
+.plans-card {
+  position: relative;
+  padding: $mini * 1.5;
+  border-radius: 5px;
+  .plans-icon{
+    position: absolute;
+    top: -20px;
+  }
+}
