mobile and tablet styling done. Need to improve items ratio and padding/margin sets

--- a/src/styles/_bottom.scss
+++ b/src/styles/_bottom.scss
@@ -1,7 +1,30 @@
-.bottom-form{
-  flex-direction: column;
-  align-items: center;
+.form-wrap{
   .title{
     @include font-sizing($regular-title, $regular-title-line);
+  }
+  @media (min-width: $tablet) {
+   background-image: url('../assets/bg-footer-squiggle.svg');
+   background-size: contain;
+  }
+}
+
+.bottom-form{
+  flex-direction: column;
+  @media (min-width: $tablet){
+    max-width: $tablet-width;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    .input-wrapper{
+      width: 65%;
+    }
+    .input{
+      margin: 0;
+    }
+    .button{
+      width: 30%;
+      margin: 0;
+    }
   }
 }
