--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -30,8 +30,16 @@ $text-line: $min-title-line;
 
 //spacing
 
+$max: 6rem;
 $regular: 2rem;
 $mini: 1rem;
 $radius: 45px;
+
+//screen size
+$tablet: 649px;
+$tablet-width: 500px;
+$desktop: 1007px;
+$desktop-width: 900px;
+$desktop-limit: 1240px;
 
 
