--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -15,6 +15,15 @@
       align-self: center;
     }
   }
+  @media (min-width: $desktop){
+    flex-direction: column;
+    &:nth-child(2n){
+      align-self: center;
+    }
+    &:nth-child(2n + 1){
+      align-self: flex-start;
+    }
+  }
 }
 
 .image-container{
@@ -52,6 +61,12 @@
   .subtitle{
     text-align: center;
   }
+}
+
+.title-transition{
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .page-section{
