--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -9,6 +9,10 @@
     flex-direction: column;
     align-items: center;
   }
+  @media(min-width: $desktop){
+    flex-direction: row;
+    min-height: 40vh;
+  }
 }
 
 .item-container{
