--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,7 +1,3 @@
-.main-container{
-  background-color: $main-background-color;
-}
-
 .page-section{
   margin-top: $regular * 3;
   @media (min-width: $tablet){
@@ -11,6 +7,7 @@
   }
   @media(min-width: $desktop){
     flex-direction: row;
+    gap: $regular;
     min-height: 40vh;
   }
 }
@@ -18,10 +15,11 @@
 .item-container{
   flex-direction: column;
   align-items: center;
-  &:nth-child(n){
-    margin-bottom: $regular * 1.5; 
-  }
+  margin-bottom: $regular * 1.5;
   &:last-child{
+    margin-bottom: 0;
+  }
+  @media (min-width: $desktop){
     margin-bottom: 0;
   }
 }
@@ -29,11 +27,7 @@
 .plans-card {
   position: relative;
   padding: $mini * 1.5;
-  border-radius: 5px;
-  .plans-icon{
-    position: absolute;
-    top: -20px;
-  }
+  margin-bottom: $regular * 2;
   @media (min-width: $tablet){
     width: $tablet-width;
   }
@@ -42,3 +36,4 @@
 .form-wrap{
   padding-bottom: $max;
 }
+
