--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -15,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: $sans-serif;
   color: $font-color;
+  background-color: $main-background-color;
 }
 
 h1,h2,h3,h4,h5,h6{
